--- a/profiles/default-prefix/ChangeLog
+++ b/profiles/default-prefix/ChangeLog
@@ -2,6 +2,36 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  04 Mar 2009; Jeremy Olexa <darkside@gentoo.org> -aix, -aix/5.2.0.0,
+  -aix/5.2.0.0/package.provided, -aix/5.2.0.0/parent, -aix/5.2.0.0/ppc,
+  -aix/5.2.0.0/ppc/deprecated, -aix/5.2.0.0/ppc/make.defaults,
+  -aix/5.2.0.0/ppc/parent, -aix/5.3.0.0, -aix/5.3.0.0/package.provided,
+  -aix/5.3.0.0/parent, -aix/5.3.0.0/ppc, -aix/5.3.0.0/ppc/deprecated,
+  -aix/5.3.0.0/ppc/make.defaults, -aix/5.3.0.0/ppc/parent,
+  -aix/make.defaults, -aix/package.mask, -aix/package.unmask,
+  -aix/package.use, -aix/package.use.force, -aix/packages, -aix/parent,
+  -aix/profile.bashrc, -aix/use.force, -aix/use.mask, -aix/virtuals, -hpux,
+  -hpux/B.11.11, -hpux/B.11.11/hppa, -hpux/B.11.11/hppa/deprecated,
+  -hpux/B.11.11/hppa/hppa1.1, -hpux/B.11.11/hppa/hppa1.1/make.defaults,
+  -hpux/B.11.11/hppa/hppa1.1/parent, -hpux/B.11.11/hppa/hppa2.0,
+  -hpux/B.11.11/hppa/hppa2.0/32,
+  -hpux/B.11.11/hppa/hppa2.0/32/make.defaults,
+  -hpux/B.11.11/hppa/hppa2.0/32/parent, -hpux/B.11.11/hppa/hppa2.0/64,
+  -hpux/B.11.11/hppa/hppa2.0/64/make.defaults,
+  -hpux/B.11.11/hppa/hppa2.0/64/parent, -hpux/B.11.11/hppa/hppa2.0/parent,
+  -hpux/B.11.11/hppa/make.defaults, -hpux/B.11.11/hppa/parent,
+  -hpux/B.11.11/package.provided, -hpux/B.11.11/parent, -hpux/B.11.23,
+  -hpux/B.11.23/ia64, -hpux/B.11.23/ia64/deprecated,
+  -hpux/B.11.23/ia64/make.defaults, -hpux/B.11.23/ia64/parent,
+  -hpux/B.11.23/package.provided, -hpux/B.11.23/parent, -hpux/B.11.31,
+  -hpux/B.11.31/ia64, -hpux/B.11.31/ia64/deprecated,
+  -hpux/B.11.31/ia64/make.defaults, -hpux/B.11.31/ia64/parent,
+  -hpux/B.11.31/package.provided, -hpux/B.11.31/parent, -hpux/make.defaults,
+  -hpux/package.mask, -hpux/package.use, -hpux/packages, -hpux/parent,
+  -hpux/profile.bashrc, -hpux/use.force, -hpux/use.mask, -hpux/virtuals:
+  Remove seldom used aix/hpux profiles. It has been long enough that people
+  should be on the new style, more maintained profiles
+
   01 Feb 2009; Fabian Groffen <grobian@gentoo.org> -darwin, -darwin/macos,
   -darwin/macos/10.3, -darwin/macos/10.3/deprecated,
   -darwin/macos/10.3/make.defaults, -darwin/macos/10.3/package.mask,
