--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,13 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2409 2009/03/02 17:13:56 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2410 2009/03/03 14:41:32 cardoe Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  03 Mar 2009; Doug Goldstein <cardoe@gentoo.org> package.mask:
+  fix up nvidia-drivers masks. mask 180.35 after discussions with nvidia
 
   02 Mar 2009; Jeroen Roovers <jer@gentoo.org> package.mask:
   Correct app-admin/sysstat mask.
