--- a/profiles/arch/mips/ChangeLog
+++ b/profiles/arch/mips/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for Gentoo/MIPS profile directory
-# Copyright 2007-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/mips/ChangeLog,v 1.10 2008/11/10 11:17:31 armin76 Exp $
+# Copyright 2007-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/mips/ChangeLog,v 1.11 2009/03/03 12:44:49 pva Exp $
+
+  03 Mar 2009; Peter Volkov <pva@gentoo.org> use.mask:
+  Masked mpi USE flag, per bug #227631
 
   10 Nov 2008; Raúl Porcel <armin76@gentoo.org> package.use.mask:
   Move stuff from default/linux/mips
