--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.12699 (05 Mar 2009)
+
+  05 Mar 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.12565.ebuild, +portage-2.2.00.12699.ebuild:
+  New snapshot
+
 *portage-2.2.00.12671 (21 Feb 2009)
 
   21 Feb 2009; Fabian Groffen <grobian@gentoo.org>
