--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  06 Mar 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
+  masked ncurses 5.7 on interix.
+
   05 Mar 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Unmask libtool-2.2, bootstrapping seems to work on it at least
 
