--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  06 Mar 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
+  remove mask on apache, bug 261105
+
   06 Mar 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
   masked new coreutils 7.1 on interix for now. needs some more touching.
 
