--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,22 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2410 2009/03/03 14:41:32 cardoe Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2414 2009/03/06 00:57:48 scarabeus Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  06 Mar 2009; Tomas Chvatal <scarabeus@gentoo.org> package.mask:
+  Mask net-misc/kickpim for removal
+
+  05 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org> package.mask:
+  Mask dev-ruby/ruby-gdchart.
+
+  04 Mar 2009; Alexey Shvetsov <alexxy@gentoo.org> package.mask:
+  KDE 4.2.1 was added
+
+  04 Mar 2009; Alexey Shvetsov <alexxy@gentoo.org> package.mask:
+  Add entry for kde 4.2.1
 
   03 Mar 2009; Doug Goldstein <cardoe@gentoo.org> package.mask:
   fix up nvidia-drivers masks. mask 180.35 after discussions with nvidia
