--- a/dev-libs/mpfr/ChangeLog
+++ b/dev-libs/mpfr/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/mpfr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpfr/ChangeLog,v 1.96 2009/03/03 05:36:51 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpfr/ChangeLog,v 1.98 2009/03/04 17:40:52 fmccor Exp $
+
+  04 Mar 2009; Ferris McCormick <fmccor@gentoo.org> mpfr-2.4.1_p1.ebuild:
+  Sparc stable, security Bug #260968.
+
+  04 Mar 2009; Brent Baude <ranger@gentoo.org> mpfr-2.4.1_p1.ebuild:
+  Marking mpfr-2.4.1_p1 ppc64 for bug 260968
 
   03 Mar 2009; Jeroen Roovers <jer@gentoo.org> mpfr-2.4.1_p1.ebuild:
   Stable for HPPA (bug #260968).
