--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  10 Mar 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
+  removed mask for file >=4.24 on interix, since 5.00 now works
+
   06 Mar 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
   remove mask on apache, bug 261105
 
