--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -3,6 +3,10 @@
 # $Id$
 
   10 Mar 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
+  removed obsolete unmask for cmake on interix, since it is no longer masked
+  by main.
+
+  10 Mar 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
   removed mask for file >=4.24 on interix, since 5.00 now works
 
   06 Mar 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
