--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  10 Mar 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
+  Enlarge findutils-4.5.3 mask, it still asserts like hell
+
   10 Mar 2009; Markus Duft <mduft@gentoo.org> windows/interix/package.mask:
   unmasked new coreutils 7.1 on windows, works now.
 
