--- a/dev-libs/mpfr/ChangeLog
+++ b/dev-libs/mpfr/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-libs/mpfr
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpfr/ChangeLog,v 1.98 2009/03/04 17:40:52 fmccor Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/mpfr/ChangeLog,v 1.100 2009/03/07 14:23:09 armin76 Exp $
+
+  07 Mar 2009; Raúl Porcel <armin76@gentoo.org> mpfr-2.4.1_p1.ebuild:
+  alpha/arm/ia64/s390/sh stable wrt #260968
+
+  07 Mar 2009; Markus Meier <maekke@gentoo.org> mpfr-2.4.1_p1.ebuild:
+  amd64/x86 stable, bug #260968
 
   04 Mar 2009; Ferris McCormick <fmccor@gentoo.org> mpfr-2.4.1_p1.ebuild:
   Sparc stable, security Bug #260968.
