--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.12807 (12 Mar 2009)
+
+  12 Mar 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.12671.ebuild, +portage-2.2.00.12807.ebuild:
+  Bump
+
 *portage-2.2.00.12790 (09 Mar 2009)
 
   09 Mar 2009; Fabian Groffen <grobian@gentoo.org>
