--- a/profiles/arch/s390/ChangeLog
+++ b/profiles/arch/s390/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo/s390 profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/s390/ChangeLog,v 1.8 2009/01/16 09:58:27 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/s390/ChangeLog,v 1.10 2009/03/11 18:17:44 armin76 Exp $
+
+  11 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add lyx to use.mask
+
+  10 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add xindy to use.mask
 
   16 Jan 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
   Use.mask chicken, clisp, R, octave
