--- a/profiles/arch/sh/ChangeLog
+++ b/profiles/arch/sh/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for Gentoo/sh profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sh/ChangeLog,v 1.15 2009/02/20 18:07:15 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/sh/ChangeLog,v 1.18 2009/03/12 10:32:04 armin76 Exp $
+
+  12 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add video_cards_radeonhd and video_cards_ast to use.mask
+
+  11 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add lyx to use.mask
+
+  10 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Add xindy to use.mask
 
   20 Feb 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
   Use.mask scanner, no hardware to test
