--- a/gnome-extra/evolution-data-server/ChangeLog
+++ b/gnome-extra/evolution-data-server/ChangeLog
@@ -1,6 +1,35 @@
 # ChangeLog for gnome-extra/evolution-data-server
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.210 2009/03/09 21:15:02 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-extra/evolution-data-server/ChangeLog,v 1.216 2009/03/12 23:28:41 dang Exp $
+
+  12 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
+  evolution-data-server-2.24.5-r2.ebuild:
+  Marked stable on amd64 for bug #261203
+
+*evolution-data-server-2.24.5-r2 (12 Mar 2009)
+
+  12 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
+  +files/evolution-data-server-CVE-2009-0582.patch,
+  +evolution-data-server-2.24.5-r2.ebuild:
+  Add fix for bug #261203
+
+  12 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
+  evolution-data-server-2.24.5-r1.ebuild:
+  Stable on alpha, bug #258867
+
+  12 Mar 2009; Tobias Klausmann <klausman@gentoo.org>
+  evolution-data-server-2.22.3-r2.ebuild:
+  Stable on alpha, bug #258867
+
+  11 Mar 2009; Brent Baude <ranger@gentoo.org>
+  evolution-data-server-2.22.3-r2.ebuild,
+  evolution-data-server-2.24.5-r1.ebuild:
+  Marking evolution-data-server-2.22.3-r2 and evolution-data-server-2.24.5-r1
+  for bug 258867
+
+  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
+  evolution-data-server-2.24.5.ebuild:
+  Marked stable on amd64
 
   09 Mar 2009; Markus Meier <maekke@gentoo.org>
   evolution-data-server-2.22.3-r2.ebuild:
