--- a/profiles/arch/arm/ChangeLog
+++ b/profiles/arch/arm/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for Gentoo/ARM profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/arm/ChangeLog,v 1.20 2009/03/12 10:30:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/arm/ChangeLog,v 1.23 2009/03/14 20:04:29 armin76 Exp $
+
+  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Use.mask xfs, as xfs doesn't work too well on arm
+
+  14 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Use.mask cupsddk
+
+  13 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
+  Masking a lot of video_cards which i doubt are available on ARM
 
   12 Mar 2009; Raúl Porcel <armin76@gentoo.org> use.mask:
   Add video_cards_radeonhd and video_cards_ast to use.mask
