--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  15 Mar 2009; Fabian Groffen <grobian@gentoo.org>
+  darwin/macos/package.mask, darwin/macos/package.use.force,
+  darwin/macos/use.mask:
+  unmask opengl use flag, it works since we have opengl in the tree, remove
+  mask for libsdl for the same reason
+
   14 Mar 2009; Fabian Groffen <grobian@gentoo.org>
   sunos/solaris/package.mask:
   Mask gdb-6.8.50.20090302.8.11 and up, as it seems to be Fedora Linux only
