--- a/dev-libs/fcgi/ChangeLog
+++ b/dev-libs/fcgi/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for dev-libs/fcgi
 # Copyright 2000-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-libs/fcgi/ChangeLog,v 1.36 2008/08/06 07:07:48 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-libs/fcgi/ChangeLog,v 1.38 2008/12/08 21:24:47 graaff Exp $
+
+*fcgi-2.4.1_pre0311112127 (08 Dec 2008)
+
+  08 Dec 2008; Hans de Graaff <graaff@gentoo.org>
+  +fcgi-2.4.1_pre0311112127.ebuild:
+  Version bump to latest snapshot to address bug raised in #250232.
+  Hardcode version number since it won't change anytime soon. Use emake.
+
+  08 Dec 2008; Hans de Graaff <graaff@gentoo.org> -fcgi-2.4.0.ebuild:
+  Remove old version
 
   06 Aug 2008; Ulrich Mueller <ulm@gentoo.org> metadata.xml:
   Add USE flag description to metadata wrt GLEP 56.
