--- a/app-portage/autounmask/ChangeLog
+++ b/app-portage/autounmask/ChangeLog
@@ -1,6 +1,19 @@
 # ChangeLog for app-portage/autounmask
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.30 2008/12/01 20:50:58 ian Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/autounmask/ChangeLog,v 1.34 2009/01/19 11:40:51 jer Exp $
+
+  19 Jan 2009; Jeroen Roovers <jer@gentoo.org> autounmask-0.23.ebuild:
+  Stable for HPPA (bug #252687).
+
+  06 Jan 2009; Dawid Węgliński <cla@gentoo.org> autounmask-0.23.ebuild:
+  Stable on amd64 (bug #252687)
+
+  29 Dec 2008; Tobias Scherbaum <dertobi123@gentoo.org>
+  autounmask-0.23.ebuild:
+  ppc stable, bug #252687
+
+  29 Dec 2008; Raúl Porcel <armin76@gentoo.org> autounmask-0.23.ebuild:
+  ia64/sparc/x86 stable wrt #252687
 
 *autounmask-0.23 (01 Dec 2008)
 
