--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,21 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2440 2009/03/15 06:33:44 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2443 2009/03/16 19:58:04 tove Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  16 Mar 2009; Torsten Veller <tove@gentoo.org> package.mask:
+  Remove mask for net-mail/ezmlm, net-mail/ezmlm-idx-mysql and
+  net-mail/ezmlm-idx-pgsql (#251383)
+
+  16 Mar 2009; Torsten Veller <tove@gentoo.org> package.mask:
+  Remove masks for >=mail-client/squirrelmail-1.5 and
+  =mail-filter/procmail-3.22-r9
+
+  16 Mar 2009; Torsten Veller <tove@gentoo.org> package.mask:
+  Mask dev-perl/OpenCA-* for removal (#247409)
 
   15 Mar 2009; Peter Volkov <pva@gentoo.org> package.mask:
   Masked dev-util/bzr-1.13 prerelease candidate and dependant
