--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,25 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2443 2009/03/16 19:58:04 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2447 2009/03/18 18:19:27 chainsaw Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  18 Mar 2009; <chainsaw@gentoo.org> package.mask:
+  Mask media-libs/spandsp-0.0.6_pre7 prior to committing, it breaks API. See
+  http://tinderbox.dev.gentoo.org/misc/rindex/media-libs/spandsp.
+
+  18 Mar 2009; Ulrich Mueller <ulm@gentoo.org> package.mask:
+  Mask app-text/xetex and dev-tex/xkeyval for removal.
+
+  17 Mar 2009; Peter Volkov <pva@gentoo.org> package.mask:
+  Remove mask on bzr prerelease and dependand bzrtools package.
+
+  17 Mar 2009; Nirbheek Chauhan <nirbheek@gentoo.org> package.mask:
+  Mask =gnome-session-2.24* and stuff that directly or indirectly needs it
+  Reason: The very well known (hey, it was /.ed!) session-saving GNOME bug
+  552387
 
   16 Mar 2009; Torsten Veller <tove@gentoo.org> package.mask:
   Remove mask for net-mail/ezmlm, net-mail/ezmlm-idx-mysql and
