--- a/profiles/arch/alpha/ChangeLog
+++ b/profiles/arch/alpha/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo/Alpha profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/alpha/ChangeLog,v 1.23 2009/02/06 16:41:56 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/alpha/ChangeLog,v 1.25 2009/03/20 15:29:17 armin76 Exp $
+
+  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask:
+  Remask webkit on qt packages since qt-webkit is not stable
+
+  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask:
+  Unmask webkit
 
   06 Feb 2009; Raúl Porcel <armin76@gentoo.org> package.mask:
   Mask old versions of qt related packages, bug #248038
