--- a/profiles/arch/ia64/ChangeLog
+++ b/profiles/arch/ia64/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for Gentoo/ia64 profile
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/arch/ia64/ChangeLog,v 1.25 2009/02/06 16:43:05 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/arch/ia64/ChangeLog,v 1.27 2009/03/20 15:30:31 armin76 Exp $
+
+  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask:
+  Remask webkit on qt packages since qt-webkit is not stable
+
+  20 Mar 2009; Raúl Porcel <armin76@gentoo.org> package.use.mask, use.mask:
+  Mask webkit globally, unmask for qt
 
   06 Feb 2009; Raúl Porcel <armin76@gentoo.org> +package.mask:
   Mask old versions of qt related packages, bug #248038
