--- a/dev-util/subversion/ChangeLog
+++ b/dev-util/subversion/ChangeLog
@@ -1,6 +1,14 @@
 # ChangeLog for dev-util/subversion
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.352 2009/03/22 02:07:57 arfrever Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/subversion/ChangeLog,v 1.354 2009/03/22 18:32:16 arfrever Exp $
+
+  22 Mar 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  subversion-1.6.0.ebuild:
+  Don't print messages related to Berkeley DB when USE="-berkdb".
+
+  22 Mar 2009; Arfrever Frehtes Taifersar Arahesis <arfrever@gentoo.org>
+  subversion-1.6.0.ebuild:
+  Fix detection of Berkeley DB (bug #263347).
 
 *subversion-1.6.0 (22 Mar 2009)
 
