--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  24 Mar 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
+  p.mask media-libs/libgphoto2
+
   18 Mar 2009; Michael Haubenwallner <haubi@gentoo.org>
   aix/package.use.force:
   openldap builds with USE=minimal only on AIX, bug #261186
