--- a/app-portage/portage-utils/ChangeLog
+++ b/app-portage/portage-utils/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for app-portage/portage-utils
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.98 2008/05/11 04:16:14 solar Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-portage/portage-utils/ChangeLog,v 1.100 2009/03/23 12:29:58 flameeyes Exp $
+
+  23 Mar 2009; Diego E. Pettenò <flameeyes@gentoo.org>
+  portage-utils-0.2.ebuild:
+  Emulate the old applet-list file by checking sources.
+
+*portage-utils-0.2 (23 Mar 2009)
+
+  23 Mar 2009; Mike Frysinger <vapier@gentoo.org> +portage-utils-0.2.ebuild:
+  Version bump.
 
   11 May 2008; <solar@gentoo.org> portage-utils-0.1.29.ebuild:
   - stable on arm/sh
