--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  25 Mar 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
+  revert libgphoto2 mask, probably a libtool problem involved but not specific
+  to this package
+
   25 Mar 2009; Fabian Groffen <fabian@gentoo.org> package.mask:
   Mask =app-text/ghostscript-gpl-8.64* due to b0rkage in real life
 
