--- a/sys-devel/gcc-apple/ChangeLog
+++ b/sys-devel/gcc-apple/ChangeLog
@@ -2,9 +2,14 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  26 Mar 2009; Fabian Groffen <grobian@gentoo.org>
+  +files/gcc-apple-4.2.1-prefix-search-dirs.patch,
+  gcc-apple-4.0.1_p5490-r1.ebuild, gcc-apple-4.2.1_p5566-r1.ebuild:
+  Add prefix search path patch by Heiko Przybyl. No revbump yet, as more
+  changes are pending.
+
   07 Mar 2009; Fabian Groffen <grobian@gentoo.org>
-  gcc-apple-4.0.1_p5490-r1.ebuild, gcc-apple-4.0.1_p5490-r1.ebuild,
-  gcc-apple-4.2.1_p5566-r1.ebuild, gcc-apple-4.2.1_p5566-r1.ebuild:
+  gcc-apple-4.0.1_p5490-r1.ebuild, gcc-apple-4.2.1_p5566-r1.ebuild:
   Remove libiberty.a, it is not needed and it conflicts with slots
 
 *gcc-apple-4.2.1_p5566-r1 (07 Mar 2009)
