--- a/sys-devel/gcc-apple/ChangeLog
+++ b/sys-devel/gcc-apple/ChangeLog
@@ -2,6 +2,15 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*gcc-apple-4.2.1_p5566-r2 (26 Mar 2009)
+*gcc-apple-4.0.1_p5490-r2 (26 Mar 2009)
+
+  26 Mar 2009; Fabian Groffen <grobian@gentoo.org> metadata.xml,
+  -gcc-apple-4.0.1_p5490-r1.ebuild, +gcc-apple-4.0.1_p5490-r2.ebuild,
+  -gcc-apple-4.2.1_p5566-r1.ebuild, +gcc-apple-4.2.1_p5566-r2.ebuild:
+  Bump for fortran support in gcc-apple-4.2.1 and search path fixes mostly for
+  libtool
+
   26 Mar 2009; Fabian Groffen <grobian@gentoo.org>
   +files/gcc-apple-4.2.1-prefix-search-dirs.patch,
   gcc-apple-4.0.1_p5490-r1.ebuild, gcc-apple-4.2.1_p5566-r1.ebuild:
