--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  26 Mar 2009; Jeremy Olexa <darkside@gentoo.org> package.mask:
+  p.mask xfce4-4.6.0 based on its dependance for xorg-server-1.5.3
+
   26 Mar 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Unmask gcc-4.3, we can compile @system with it, bootstrapping is still
   initially done with 4.2 since 4.3 can't be bootstrapped (fails to compile)
