--- a/sys-apps/portage/ChangeLog
+++ b/sys-apps/portage/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+*portage-2.2.00.13280 (02 Apr 2009)
+
+  02 Apr 2009; Fabian Groffen <grobian@gentoo.org>
+  -portage-2.2.00.13243.ebuild, +portage-2.2.00.13280.ebuild:
+  Bump for bug #264245, ecompress was broken
+
 *portage-2.2.00.13243 (29 Mar 2009)
 
   29 Mar 2009; Fabian Groffen <grobian@gentoo.org>
