--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  03 Apr 2009; Fabian Groffen <grobian@gentoo.org> darwin/package.use.mask:
+  mask gcj on gcc-4.3.3, ld: unknown option: -R/Library/Gentoo/usr/lib
+
   02 Apr 2009; Fabian Groffen <grobian@gentoo.org> package.mask:
   Mask autoconf-2.63b for as long autoconf-wrapper doesn't deal with it
 
