--- a/profiles/ChangeLog
+++ b/profiles/ChangeLog
@@ -1,10 +1,16 @@
 # ChangeLog for profile directory
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2488 2009/04/02 19:30:09 ulm Exp $
+# $Header: /var/cvsroot/gentoo-x86/profiles/ChangeLog,v 1.2490 2009/04/03 18:14:01 matsuu Exp $
 #
 # This ChangeLog should include records for all changes in profiles directory.
 # Only typo fixes which don't affect portage/repoman behaviour could be avoided
 # here. If in doubt put a record here!
+
+  03 Apr 2009; MATSUU Takuto <matsuu@gentoo.org> use.local.desc:
+  Added augeas and shadow local use flags for app-admin/puppet.
+
+  03 Apr 2009; Hanno Boeck <hanno@gentoo.org> use.local.desc:
+  Add local use-flags for merkaartor.
 
   02 Apr 2009; Ulrich Mueller <ulm@gentoo.org> package.mask:
   Mask app-text/tetex for removal.
