--- a/sys-process/unixtop/ChangeLog
+++ b/sys-process/unixtop/ChangeLog
@@ -1,4 +1,12 @@
 # ChangeLog for sys-process/unixtop
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Id$
+
+*unixtop-3.8_beta1-r1 (05 Apr 2009)
+
+  05 Apr 2009; Fabian Groffen <grobian@gentoo.org>
+  +files/unixtop-3.8_beta1-memleak-fix.patch,
+  +files/unixtop-3.8_beta1-renice-segfault.patch, metadata.xml,
+  -unixtop-3.8_beta1.ebuild, +unixtop-3.8_beta1-r1.ebuild:
+  Bump for two patches from OpenSolaris folks to fix segfaults
 
