Fix changelog entry to be more correct (Portage version: 2.2.00.13286-prefix/svn/SunOS i386)

--- a/sys-process/unixtop/ChangeLog
+++ b/sys-process/unixtop/ChangeLog
@@ -8,5 +8,6 @@
   +files/unixtop-3.8_beta1-memleak-fix.patch,
   +files/unixtop-3.8_beta1-renice-segfault.patch, metadata.xml,
   -unixtop-3.8_beta1.ebuild, +unixtop-3.8_beta1-r1.ebuild:
-  Bump for two patches from OpenSolaris folks to fix segfaults
+  Bump for two patches from OpenSolaris folks to fix a memleak and a
+  segfault
 
