--- a/profiles/prefix/ChangeLog
+++ b/profiles/prefix/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  05 Apr 2009; Fabian Groffen <grobian@gentoo.org>
+  bsd/freebsd/7.1/x64/make.defaults:
+  Fix up x64-freebsd profile, there is no backwards compat issue, and the
+  keyword must be x64-freebsd, not x86-freebsd
+
   03 Apr 2009; Fabian Groffen <grobian@gentoo.org> darwin/package.use.mask:
   mask gcj on gcc-4.3.3, ld: unknown option: -R/Library/Gentoo/usr/lib
 
